[package]
name = "rv"
version = "0.16.5"
authors = ["Baxter Eaves", "Michael Schmidt"]
description = "Random variables"
repository = "https://github.com/promised-ai/rv"
readme = "README.md"
license = "MIT"
keywords = ["Probability", "Statistics", "Bayesian", "Machine-learning"]
categories = ["science"]
edition = "2021"
include = ["README.md", "src/**/*", "benches/*", "Cargo.toml"]
rust-version = "1.72"

[badges]
github = { repository = "promised-ai/rv", tag = "v0.16.0" }
maintenance = { status = "actively-developed" }

[dependencies]
argmin = { version = "0.8", optional = true }
argmin-math = { version = "0.3", optional = true, features = ["nalgebra_v0_32"] }
doc-comment = "0.3"
lru = "0.9.0"
nalgebra = { version = "0.32", optional = true }
num = "0.4"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.4.3"
serde = {version = "1", features = ["derive"], optional = true}
special = "0.10"
peroxide = { version = "0.32.1" }
num-traits = "0.2.17"
rand_xoshiro = { version = "0.6", optional = true, features=["serde1"]}
itertools = "0.12.1"

[dev-dependencies]
assert = "0.7"
criterion = { version = "0.5", features = ["html_reports"] }
indoc = "2"
serde_yaml = "0.9"
serde_json = "1"
approx = "0.5"
rand_xoshiro = "0.6"

[features]
serde1 = ["serde", "nalgebra/serde-serialize"]
arraydist = ["nalgebra"]
process = ["serde", "nalgebra/serde-serialize", "argmin", "argmin-math", "arraydist"]
datum = []
experimental = ["rand_xoshiro"]

[package.metadata.docs.rs]
all-features = true

# Benchmarks
# ==========
[[bench]]
name = "mvg"
harness = false
required-features = ["arraydist"]

[[bench]]
name = "gev"
harness = false

[[bench]]
name = "wishart"
harness = false
required-features = ["arraydist"]

[[bench]]
name = "categorical"
harness = false

[[bench]]
name = "beta"
harness = false

[[bench]]
name = "unit_powerlaw"
harness = false

[[bench]]
name = "rv"
harness = false
required-features = ["arraydist"]

[[bench]]
name = "mixture_entropy"
harness = false
